k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
